# libpicousb

./: .gitignore  CMakeLists.txt  README.md  build.sh  usbexplorer.sh
src/: CMakeLists.txt  bsp.cpp  dev_lowlevel.c  main.cpp
src/include/: bsp.h
